tests/ui/consts/dangling_raw_ptr.stderr
error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:1:1
   |
LL | const FOO: *const u32 = {
   | ^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/dangling_raw_ptr.rs:7:13
   |
LL |     let x = FOO;
   |             ^^^

note: erroneous constant encountered
  --> $DIR/dangling_raw_ptr.rs:7:13
   |
LL |     let x = FOO;
   |             ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 1 previous error

